[tool.poetry]
name = "top-1m-jarm"
version = "0.1.0"
description = ""
authors = ["Hugo CHASTEL"]

[tool.poetry.dependencies]
python = "^3.10"
rq = "^1.10.1"
redis = "^4.3.4"
maturin = "^0.13.0"
sentry-sdk = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
